itch severity
